--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/css/theme.css": "/css/theme.css"
+    "/js/libs.js": "/js/libs.js",
+    "/css/lib.css": "/css/lib.css"
 }
